# gamma-root

./: CMakeLists.txt  gamrlogon_user.cc.in
src/lib/abbrevs/: Abbreviations.cc  Abbreviations.hh
src/lib/angdist/: StatTensor.cc  StatTensor.hh
src/lib/spect/: Cut.cc  Display.cc  Display.hh  Fit.cc  FitGuesses.cc.in  FitGuesses.hh
src/lib/utils/: Utilities.cc  Utilities.hh
